# capyspeedtest

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_issue.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml  stale.yml
scripts/: build_local_signed.py  run_ci_checks.py  update_version.py
src/: App.test.tsx  App.tsx  main.tsx  setupTests.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs  services_legacy.rs
src-tauri/src/commands/: data_mgmt.rs  database_cmd.rs  fs_utils.rs  mod.rs  settings.rs  speedtest.rs  subscription.rs  updates.rs
src-tauri/src/database/: batch.rs  mod.rs  result.rs
src-tauri/src/services/: checkpoint.rs  geoip.rs  http_client.rs  kernel.rs  mod.rs  speedtest.rs  state.rs  subscription.rs  system_proxy.rs  updater.rs
src-tauri/src/services/subscription/: mod.rs  types.rs  utils.rs
src-tauri/src/services/subscription/parsers/: anytls.rs  hysteria.rs  hysteria2.rs  mieru.rs  mod.rs  netch.rs  snell.rs  socks.rs  ss.rs  ssd.rs  ssr.rs  trojan.rs  tuic.rs  v2.rs  vless.rs  vmess.rs  vmess_variants.rs
src/api/: database.ts  helpers.ts  settings.ts  speedtest.ts  subscription.ts  updates.ts
src/contexts/: AlertContext.tsx  SpeedtestContext.tsx  ThemeContext.tsx
src/hooks/: index.ts  useSettingsProgressListeners.ts  (+1 more)
(+52 files in other folders)
