[package]
name = "capyspeedtest_ui"
version = "0.1.0"
description = "CapySpeedtest desktop shell"
authors = ["capyspeedtest"]
license = ""
repository = "https://github.com/rroy233/capyspeedtest"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
regex = "1"
once_cell = "1"
url = "2"
base64 = "0.22"
sha2 = "0.10"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking", "stream", "socks"] }
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

# 新增依赖：真实网络测速和 GeoIP
tokio = { version = "1", features = ["full"] }
futures = "0.3"
maxminddb = "0.27"
socks = "0.3"
trust-dns-resolver = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
urlencoding = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }
native-tls = "0.2"
semver = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
